# sindr-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LIMITATIONS.md  README.md
.github/workflows/: ci.yml
sindr/: Cargo.toml  NOTICE  README.md
sindr-devices/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
sindr-devices/src/: bjt.rs  diode.rs  igbt.rs  jfet.rs  led.rs  lib.rs  mosfet.rs  photodiode.rs  photoresistor.rs  schottky.rs  thermistor.rs  varactor.rs  zener.rs
sindr/examples/: bjt_amplifier.rs  bode_plot.rs  dc_sweep_diode.rs  list_examples.rs  run_example.rs  transient_rc.rs  voltage_divider.rs
sindr/src/: ac_analysis.rs  circuit.rs  dc_sweep.rs  error.rs  examples.rs  lib.rs  mna.rs  newton_raphson.rs  node_map.rs  results.rs  stamp.rs  temp_sweep.rs  transient.rs  validation.rs  waveform.rs
sindr/tests/: initial_voltages.rs  math_correctness.rs
