[workspace]
members = ["sindr", "sindr-devices"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/steffendybvik/sindr-rs"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sindr = { path = "sindr", version = "0.1.0-alpha.4" }
sindr-devices = { path = "sindr-devices", version = "0.1.0-alpha.4" }
