[package]
name = "sindr"
version = "0.1.0-alpha.4"
edition = "2021"
rust-version = "1.87"
description = "Rust circuit simulator: SPICE-style MNA solver with built-in semiconductor device models. Transient, AC, DC sweep, temperature sweep."
license = "MIT OR Apache-2.0"
repository = "https://github.com/steffendybvik/sindr-rs"
homepage = "https://github.com/steffendybvik/sindr-rs"
documentation = "https://docs.rs/sindr"
readme = "README.md"
keywords = ["electronics", "simulation", "spice", "circuit", "mna"]
categories = ["science", "simulation"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
sindr-devices = { workspace = true }
nalgebra = "0.34"
num-complex = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = { workspace = true }

[features]
default = ["serde", "examples"]
examples = ["serde"]

[dev-dependencies]
approx = "0.5"
serde_json = { workspace = true }

[[example]]
name = "list_examples"
required-features = ["examples"]

[[example]]
name = "run_example"
required-features = ["examples"]
